--- a/src/components/Background/background.module.scss
+++ b/src/components/Background/background.module.scss
@@ -9,7 +9,7 @@
 }
 
 .backgroundBlooks {
-    position: absolute;
+    position: fixed;
     width: 200%;
     height: 200%;
     top: 50%;
@@ -19,4 +19,17 @@
     // background-image: url("/content/background.png");
     opacity: var(--background-opacity);
     transform: translate(-50%, -50%) rotate(15deg);
+}
+
+.backgroundGradient {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(140deg,
+            rgba(0, 0, 0, 0.33) 0%,
+            rgba(0, 0, 0, 0.15) 50%,
+            rgba(0, 0, 0, 0.05) 100%);
+    z-index: 1;
 }
