--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -70,6 +70,24 @@
         background-color: var(--accent-color);
         color: var(--primary-color);
     }
+
+    &[data-staff="true"] {
+        color: red;
+
+        &:hover {
+            background-color: rgba(255, 0, 0, 0.2);
+        }
+
+        &:active {
+            background-color: red;
+            color: var(--primary-color);
+        }
+
+        &[data-active="true"] {
+            background-color: red;
+            color: var(--primary-color);
+        }
+    }
 }
 
 .pageIcon {
@@ -263,6 +281,13 @@
 
 .pageScroller {
     height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.pageScrollerStaff {
+    height: 30%;
+    margin-top: 15%;
     overflow-y: auto;
     overflow-x: hidden;
 }
