--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -65,13 +65,13 @@
 
 .categoryContent {
     display: flex;
-    overflow-y: auto;
+    // overflow-y: auto;
     margin: 0 0 0 5%;
     flex-direction: column;
 
     transition: max-height 400ms cubic-bezier(.32, .77, .84, 1.02);
     min-height: 0;
-    overflow: clip;
+    // overflow: clip;
 
     // &[data-opened="true"] {
     //     animation: openCategory 1.2s cubic-bezier(.32,.77,.84,1.02) forwards;
@@ -169,7 +169,6 @@
     border-radius: 10px;
     overflow: hidden;
     padding-bottom: 7px;
-    box-shadow: inset 0 -7px rgba(0, 0, 0, .2);
     box-sizing: border-box;
     transition: .2s;
 
@@ -182,19 +181,51 @@
     }
 }
 
+.packContainer2 {
+    position: relative;
+    width: 220px;
+    height: 220px;
+    overflow: hidden;
+    border-radius: 10px;
+    transition: .2s ease;
+    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1);
+
+    &:hover {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.1);
+        cursor: pointer;
+    }
+
+    &:active {
+        transform: scale(0.90);
+        box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.1);
+    }
+}
+
+.packImageHolder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 -7px 0 rgba(0, 0, 0, 0.2) inset;
+    border-radius: 10px;
+}
+
 .packImageContainer {
     height: 100%;
     position: relative;
 }
 
 .packImage {
-    width: 65%;
+    width: 67.5%;
 }
 
 .packShadow {
-    width: 70%;
+    width: 71.5%;
     filter: brightness(0) invert(100%);
-    opacity: .5;
+    opacity: .2;
+    z-index: -1;
 }
 
 .packImage,
@@ -206,10 +237,14 @@
 }
 
 .packBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 110%;
     object-fit: cover;
     filter: brightness(0.5);
+    z-index: -10;
 }
 
 .packRatesIcon {
@@ -241,16 +276,17 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 24px;
-    padding: 0 12px;
-    background-color: rgba(0, 0, 0, .2);
+    height: 26px;
+    padding: 0 10px;
+    background-color: rgba(0, 0, 0, .4);
+    backdrop-filter: blur(4px);
     font-family: "Titan One", sans-serif;
     font-size: 18px;
     color: var(--accent-color);
-    border-radius: 0 10px 10px 0;
+    border-radius: 10px;
     position: absolute;
-    bottom: 12px;
-    left: 0;
+    bottom: calc(6px + 7px);
+    left: 6px;
 
     &>img {
         width: 16px;
@@ -356,13 +392,25 @@
 .openModalBackground {
     width: 100%;
     height: 100%;
-    filter: brightness(0.4) blur(12px);
-    transform: scale(1.2);
+    scale: 1.2;
+    filter: brightness(0.4) blur(7px);
 
     &>img {
-        width: 100%;
+        width: 130%;
         height: 100%;
         object-fit: cover;
+
+        animation: moveBackground 45s linear alternate infinite;
+
+        @keyframes moveBackground {
+            0% {
+                transform: translateX(0);
+            }
+
+            100% {
+                transform: translateX(-20%);
+            }
+        }
     }
 }
 
@@ -376,7 +424,7 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
-    filter: drop-shadow(0 0 20px #000);
+    filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.3));
 
     &[data-opening="true"] {
         animation: packDrop .2s linear .4s forwards;
@@ -484,9 +532,8 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
-    box-shadow: 0 0 4px #00000026;
     background-color: var(--background-color);
-    filter: drop-shadow(0 0 5px #000);
+    filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.3));
 
     @media only screen and (max-width: 650px) {
         width: 300px;
@@ -542,15 +589,17 @@
 }
 
 .openPackBlookBlookText {
-    text-shadow: 0 3px 3px rgba(0, 0, 0, .2);
+    text-shadow: 0.2rem 0.2rem 0 rgba(0, 0, 0, .2);
     width: 100%;
     height: 50px;
     text-align: center;
 }
 
 .openPackBlookRarityText {
-    font-size: 30px;
-    -webkit-text-stroke: #000 1.5px;
+    margin-top: -5px;
+    font-size: 27.5px;
+    -webkit-text-stroke: rgba(0, 0, 0, 0.5) 1.5px;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 
     @media only screen and (max-width: 650px) {
         font-size: 25px;
@@ -565,8 +614,22 @@
     font-family: "Titan One", sans-serif;
     color: var(--accent-color);
     text-align: center;
-    font-size: 30px;
-    text-shadow: 0 0 4px rgba(0, 0, 0, .4);
+    font-size: 35px;
+    -webkit-text-stroke: rgba(0, 0, 0, 0.5) 0.1rem;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+
+    // pulsing animation
+    animation: pulse 1.5s ease-in-out infinite;
+
+    @keyframes pulse {
+        0%, 100% {
+            transform: scale(1);
+        }
+
+        50% {
+            transform: scale(1.05);
+        }
+    }
 }
 
 .openPackBlookShadow {
