--- a/src/views/Settings/Billing/billing.module.scss
+++ b/src/views/Settings/Billing/billing.module.scss
@@ -103,6 +103,7 @@
     @media screen and (max-width: 768px) {
         max-width: 95%;
         padding: 10px;
+        padding-bottom: 14px;
         margin: 0 auto;
         justify-content: center;
         align-items: center;
@@ -118,5 +119,109 @@
 .paymentMethodButton {
     &>i {
         margin-right: 10px;
+    }
+}
+
+.transactionHistoryContainer {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    background: var(--primary-color);
+    border-radius: 10px;
+    padding: 16px;
+    padding-bottom: 20px;
+    box-shadow: inset 0 -7px rgba(0, 0, 0, .2);
+
+    @media screen and (max-width: 768px) {
+        max-width: 95%;
+        padding: 10px;
+        padding-bottom: 14px;
+        margin: 0 auto;
+    }
+}
+
+.transactionHistoryTopRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.transactionHistoryDate {
+    width: 20%;
+}
+
+.transactionHistoryDescription {
+    display: flex;
+    flex: 1 1 50%;
+    margin-left: 8px;
+}
+
+.transactionHistoryAmount {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+}
+
+.transactionHistory {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    gap: 5px;
+}
+
+.transaction {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    background: var(--background-color);
+    transition: filter 0.2s;
+    cursor: pointer;
+
+    &:hover {
+        filter: brightness(1.2);
+    }
+
+    &:active {
+        filter: brightness(0.9);
+    }
+}
+
+.transactionDate {
+    width: 20%;
+
+    @media screen and (max-width: 768px) {
+        width: 30%;
+        font-size: 14px;
+    }
+}
+
+.transactionDescription {
+    display: flex;
+    flex: 1 1 50%;
+    margin-left: 8px;
+
+    @media screen and (max-width: 768px) {
+        width: 50%;
+        font-size: 14px;
+    }
+}
+
+.transactionAmount {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+
+    @media screen and (max-width: 768px) {
+        width: 30%;
+        font-size: 14px;
     }
 }
