update vite (thanks for the vulnurability) optimize brender, convert market particles to brender, remove phaser, rarity icons

--- a/src/components/Development/Information/information.module.scss
+++ b/src/components/Development/Information/information.module.scss
@@ -15,6 +15,7 @@
     text-align: right;
     font-size: 2vh;
     font-weight: 700;
+    pointer-events: none;
 }
 
 .wipText {
@@ -24,4 +25,5 @@
     top: 1%;
     text-align: center;
     font-size: 2vh;
+    pointer-events: none;
 }
