--- a/src/all.scss
+++ b/src/all.scss
@@ -116,6 +116,29 @@ a {
     }
 }
 
+.rainbowOverlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, red, orange, yellow, #0f0, #0ff, blue, #f0f, red);
+    background-size: 200%;
+    animation: rainbow 7s linear infinite;
+    z-index: 1;
+    pointer-events: none;
+    mix-blend-mode: overlay;
+    filter: brightness(1.5);
+
+    @keyframes rainbow {
+        0% {
+            background-position: 200%;
+        }
+
+        100% {
+            background-position: -200%;
+        }
+    }
+}
+
 .italic {
     font-style: italic;
 }
