--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -244,6 +244,7 @@
     height: 110%;
     object-fit: cover;
     filter: brightness(0.5);
+    user-select: none;
     z-index: -10;
 }
 
@@ -393,6 +394,7 @@
     width: 100%;
     height: 100%;
     scale: 1.2;
+    user-select: none;
     filter: brightness(0.4) blur(7px);
 
     &>img {
@@ -501,17 +503,17 @@
     cursor: pointer;
 }
 
-.phaserContainer {
+.canvas {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 0;
-    filter: brightness(1.5);
+    // filter: brightness(1.3);
 
     &[data-shiny="true"] {
-        filter: brightness(1.5) drop-shadow(0 0 25px #fff);
+        filter: drop-shadow(0 0 25px #fff);
     }
 }
 
