--- a/src/components/Modals/PurchaseProductModal/purchaseProductModal.module.scss
+++ b/src/components/Modals/PurchaseProductModal/purchaseProductModal.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     margin-top: 10px;
     width: 100%;
+    max-width: 500px;
     text-align: left;
 
     .purchaseDetailsText {
