--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -493,23 +493,82 @@
     color: var(--accent-color);
 }
 
-.sellBlooksContainer {
+.sellBlookExitSell {
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+
+.sellBlooksFlex {
+    display: flex;
     width: 100%;
-    height: 200px;
+    padding: 20px;
+    gap: 20px;
+    height: 13.5rem;
+    position: "relative";
+}
+
+.sellBlookBlookName {
+    font-size: 2.25rem;
+    font-weight: 100;
+    font-family: "Titan One", sans-serif;
+    margin: 0;
+}
+
+.sellBlookPackName {
+    font-size: 1.2rem;
+    font-weight: 700;
+    font-family: "Nunito", sans-serif;
+    margin: 0;
+}
+
+.sellBlookHoldInput {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+
+.sellBlooksContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+}
+
+.sellBlookExtraOptionButton {
+    padding: 4px 10px;
+    background-color: rgba(0, 0, 0, .2);
+    border-radius: 7px;
+    transition: ease .2s;
+    cursor: pointer;
+    font-weight: 600;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, .1);
+    }
+}
+
+.sellBlookExtraOptions {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    margin-top: -10px;
+}
+
+.sellBlookInput {
+    display: flex;
+    align-items: baseline;
 }
 
 .sellBlooks {
-    width: 80%;
+    width: 15rem;
     height: 100%;
+    max-height: 15rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     border: 5px solid var(--secondary-color);
-    margin: 20px;
+    // margin: 20px;
     border-radius: 7px;
     flex-wrap: wrap;
     overflow-x: hidden;
