--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -506,7 +506,12 @@
     padding: 20px;
     gap: 20px;
     height: 13.5rem;
-    position: "relative";
+
+    @media only screen and (max-width: 685px) {
+        flex-direction: column;
+        width: unset;
+        height: unset;
+    }
 }
 
 .sellBlookBlookName {
@@ -573,6 +578,11 @@
     flex-wrap: wrap;
     overflow-x: hidden;
     overflow-y: auto;
+
+    @media only screen and (max-width: 685px) {
+        width: unset;
+        height: 80%;
+    }
 }
 
 .sellBlook {
