new pack opening animation

--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -528,6 +528,13 @@
     }
 }
 
+.openPackCenter {
+    width: 320px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
 .openBigButton {
     width: 100%;
     height: 100%;
