--- a/src/views/Settings/Billing/billing.module.scss
+++ b/src/views/Settings/Billing/billing.module.scss
@@ -277,7 +277,7 @@
 
 .transactionAmount {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     width: 40%;
     height: 24px;
