--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -146,52 +146,28 @@
     color: var(--accent-color);
 }
 
-.mobileNavbar {
-    background-color: var(--primary-color);
-    width: 100%;
-    box-sizing: border-box;
-    height: 55px;
-    padding: 0 15px 6px;
-    box-shadow: inset 0 -6px rgba(0, 0, 0, .2);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 5;
-    position: fixed;
-    top: 0;
-    left: 0;
-    visibility: hidden;
-
-    @media only screen and (max-width: 850px) {
-        visibility: visible;
-    }
-}
-
 .mobileHamburgerIcon {
-    font-size: 30px;
+    display: none;
+    position: fixed;
+    right: 0;
+    top: -4px;
+    z-index: 15;
+    padding: 10px;
+    border-radius: 0 0 0 10px;
+    box-shadow: inset 0 -6px rgba(0, 0, 0, .2);
+    background-color: var(--primary-color);
+    font-size: 24px;
     color: var(--accent-color);
-    width: 40px;
     text-align: center;
     outline: none;
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
     cursor: pointer;
-}
 
-.mobileHeader {
-    color: var(--accent-color);
-    cursor: pointer;
-    font-family: "Titan One", sans-serif;
-    font-size: 25px;
-    line-height: 49px;
-    margin-left: 5px;
-    outline: none;
-    text-align: left;
-    text-decoration: none;
-    -webkit-user-select: none;
-    user-select: none
+    @media only screen and (max-width: 850px) {
+        display: block
+    }
 }
 
 .mobileSidebarModal {
