--- a/src/components/SidebarBody/sidebarBody.module.scss
+++ b/src/components/SidebarBody/sidebarBody.module.scss
@@ -7,14 +7,14 @@
     transform: translateX(-50%);
 
     @media only screen and (max-width: 850px) {
-        top: 55px;
+        // top: 55px;
         left: 50%;
         // transform: translateX(-50%);
         width: 100%;
-        height: calc(100% - 55px);
+        // height: calc(100% - 55px);
 
         &[data-push="true"] {
-            top: 85px;
+            top: 40px;
         }
     }
 }
