--- a/src/components/TopRight/topRight.module.scss
+++ b/src/components/TopRight/topRight.module.scss
@@ -13,7 +13,7 @@
         }
 
         position: fixed;
-        top: 55px;
+        // top: 55px;
         width: 100%;
         justify-content: center;
         align-items: center;
@@ -157,8 +157,7 @@
 
     @media only screen and (max-width: 850px) {
         height: 40px;
-        margin: 0 5px;
-        margin-top: -6px;
+        margin: 0 10px;
         font-size: 16px;
     }
 }
