--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -335,3 +335,150 @@
         flex: 1;
     }
 }
+
+
+
+
+
+.sellBlookExitSell {
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+
+.sellBlooksFlex {
+    display: flex;
+    width: 100%;
+    padding: 20px;
+    gap: 20px;
+    height: 13.5rem;
+
+    @media only screen and (max-width: 685px) {
+        flex-direction: column;
+        width: unset;
+        height: unset !important;
+    }
+}
+
+.sellBlookBlookName {
+    font-size: 2.25rem;
+    font-weight: 100;
+    font-family: "Titan One", sans-serif;
+    margin: 0;
+    width: 100%;
+    height: 65px;
+
+    @media only screen and (max-width: 685px) {
+        margin-bottom: 15px;
+        height: 40px;
+    }
+}
+
+.sellBlookPackName {
+    font-size: 1.2rem;
+    font-weight: 700;
+    font-family: "Nunito", sans-serif;
+    margin: 0;
+}
+
+.sellBlookHoldInput {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+
+.sellBlooksContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sellBlookExtraOptionButton {
+    padding: 4px 10px;
+    background-color: rgba(0, 0, 0, .2);
+    border-radius: 7px;
+    transition: ease .2s;
+    cursor: pointer;
+    font-weight: 600;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, .1);
+    }
+}
+
+.sellBlookExtraOptions {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    margin-top: -10px;
+}
+
+.sellBlookInput {
+    display: flex;
+    align-items: baseline;
+}
+
+.sellBlooks {
+    width: 15rem;
+    height: 100%;
+    max-height: 15rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 5px solid var(--secondary-color);
+    // margin: 20px;
+    border-radius: 7px;
+    flex-wrap: wrap;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    @media only screen and (max-width: 685px) {
+        width: unset;
+        height: 80%;
+    }
+}
+
+.sellBlook {
+    width: 250px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+    background-color: rgba(0, 0, 0, .2);
+    padding: 10px;
+    border-radius: 7px;
+    margin: 10px;
+    cursor: pointer;
+    transition: background-color .2s;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, .4);
+    }
+
+    &[data-selected="true"] {
+        background-color: rgba(255, 255, 255, .4);
+    }
+}
+
+.sellBlookImageContainer {
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sellBlookImage {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.sellBlookInformation {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    font-weight: 700;
+}
